<resources>
    <string name="app_name">StudENU</string>
    <string name="create_group">Создать группу</string>
    <string name="contacts">Контакты</string>
    <string name="calls">Звонки</string>
    <string name="people_nearby">Люди рядом</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="help">Помощь</string>
    <string name="OpenNavDrawer">Открыт</string>
    <string name="CloseNavDrawer">Закрыт</string>
    <string name="start_communicate">Начать общение</string>

    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_description">Введите код страны и свой номер телефона.</string>
    <string name="country">Страна</string>
    <string name="select_country">Выберите страну</string>
    <string name="loginWithEmail">Войти по почте</string>
    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="mail">Почта</string>
    <string name="enter">Войти</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="select_number_help">Правильно ли указан номер?</string>
    <string name="not_provide_number">Вы не указали номер</string>
    <string name="yes">Да</string>
    <string name="change">Изменить</string>

    <string name="incorrect_format">Некорректный формат</string>
    <string name="phone_number_is_short">Указанный номер слишком короткий для региона</string>
    <string name="short_number_warning_description">Убедитесь, что правильно указываете номер. Он должен начинаться с кода страны.</string>
    <string name="ok">Ок</string>

    <string name="enter_code">Введите код</string>
    <string name="we_send_code">Мы отправили SMS с кодом проверки на ваш телефон</string>

    <string name="message">Сообщение</string>
    <string name="further">Далее</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="user_name">Имя пользователя</string>

    <string name="change_name">Изменить имя</string>
    <string name="select_user_photo">Выбрать фотографию пользователя</string>
    <string name="select_photo">Выбрать фотографию</string>
    <string name="exit">Выход</string>
    <string name="in_app">В сети</string>
    <string name="account">Аккаунт</string>
    <string name="prompt_set_phone_number">Установить или изменить номер телефона</string>
    <string name="set_user_name">Задать имя пользователя</string>
    <string name="about_me">О себе</string>
    <string name="set_about_me_information">Напиши немного о себе</string>
    <string name="name_necessary">Имя (обязательно)</string>
    <string name="surname_optional">Фамилия (необязательно)</string>
    <string name="email">Почта</string>
    <string name="change_or_untie_email">Изменить или отвязать почту</string>
    <string name="confirm_change_untie_email">Подтвердить, изменить или отвязать почту</string>
    <string name="set_email">Установить почту</string>
    <string name="no">Нет</string>
    <string name="you_sure_to_exit">Вы уверены в том что хотите выйти?</string>
    <string name="alarm">Предупреждение</string>
    <string name="email_address">Адрес электронной почты</string>
    <string name="add_email">Добавить почту</string>
    <string name="verify_email">Подтвердить почту</string>
    <string name="change_email">Изменить почту</string>
    <string name="untie_email">Отвязать почту</string>
    <string name="set_phone_number">Установить номер телефона</string>
    <string name="change_or_untie_phone_number">Изменить или отвязать номер телефона</string>
    <string name="change_email_long">Изменить адрес эл.почты</string>
    <string name="enter_email">Введите почту</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Подтвердить</string>
    <string name="change_username">Изменить имя пользователя</string>
    <string name="add_number">Добавить номер</string>
    <string name="change_number">Изменить номер</string>
    <string name="unlink_number">Отвязать номер</string>
    <string name="nickname">Никнейм</string>
    <string name="create_nickname">Создать никнейм</string>
    <string name="user_nickname">Никнейм пользователя</string>
    <string name="your_nickname">Ваш никнейм</string>
    <string name="select_public_name">Вы можете выбрать публичное имя пользователя в <b>studENU</b>. В этом Случай другие люди смогут найти Вас по такому имени и связаться, не зная вашего телефона</string>

    <string name="nickname_request">Вы можете использоваться символы <b>a-z</b>, <b>0-9</b> и подчёркивания. Минимальная длина - <b>5</b> символов</string>
    <string name="find_users">Поиск пользователей</string>
    <string name="search">Поиск</string>
</resources>