<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_mailLogin_email_container"
        style="@style/ConstraintMainStyle.Margins"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editView_mailLogin_email_text"
            style="@style/EditTextMainStyle.Margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_mailLogin_email_title"
        style="@style/MiniPromptTextStyle.TextAppearance.Margin"
        android:layout_width="40dp"
        android:text="@string/mail"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout_mailLogin_email_container"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout_mailLogin_email_container"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout_mailLogin_email_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_mailLogin_password_container"
        style="@style/ConstraintMainStyle.Margins"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_mailLogin_email_container">

        <EditText
            android:id="@+id/editText_mailLogin_password_text"
            style="@style/EditTextMainStyle.Margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_mailLogin_password_title"
        style="@style/MiniPromptTextStyle.TextAppearance.Margin"
        android:layout_width="45dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout_mailLogin_password_container"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout_mailLogin_password_container"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout_mailLogin_password_container" />

    <Button
        android:id="@+id/button_mailLogin_forgotPassword"
        style="@style/Widget.Telegram.MainCustomButtonStyle.WhiteButtonStyle.TextAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_mailLogin_password_container" />

    <Button
        android:id="@+id/button_mailLogin_further"

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mailLogin_forgotPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>